# date_shawarma_bk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  menu.json  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_tables.py  002_add_product_variants.py  00b5596068b3_update.py  27994b24e916_product_table_update.py  505aa37d4814_order_modal_update.py  9097776ae6ef_product_table_update.py  d5b03ae43989_update.py
app/: cache.py  config.py  main.py
app/core/: auth.py  email.py  logging.py  response.py  security.py  supabase_storage.py
app/db/: base.py  session.py
app/entities/: __init__.py
app/entities/category/: model.py  schema.py  service.py
app/entities/complaint_box/: model.py  schema.py  service.py
app/entities/order/: model.py  schema.py  service.py
app/entities/order_item/: model.py
app/entities/product/: model.py  schema.py  service.py
app/entities/product_variant/: model.py  schema.py  service.py
app/entities/review/: model.py  schema.py  service.py
app/entities/user/: model.py  schema.py  service.py
app/routes/: __init__.py  category.py  complaint_box.py  order.py  product.py  review.py  user.py
scripts/: import_menu.py  script.sh
